--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
+    "start": "node seeders/seed.js && node server.js",
     "watch": "nodemon server.js",
     "seed": "node seeders/seed.js"
   },
@@ -17,6 +17,7 @@
     "mongodb": "^3.5.9",
     "mongoose": "^5.3.16",
     "morgan": "^1.9.1",
+    "nodemon": "^2.0.4",
     "path": "^0.12.7"
   }
 }
